--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,16 +43,21 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+
+    /////////// Testing ////////////
+    testImplementation 'com.google.truth:truth:1.0.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+
+    ///////// Retrofit /////////////
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
 
     ////////////// ViewModel/////////////////////
     def lifecycle_version = "2.6.0-alpha03"
-    def arch_version = "2.1.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
